--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
 <body>
     <div>
         <h1>Names of the week</h1>
-        <p>Monday one of the week,</p>
+        <p>Monday one of <span>the week,</span> </p>
     </div>
-    <!-- <h1>Good Morning</h1>
-    <div>
-        <div>
-            <h1>This is Lutyoung</h1>
-            <p>My name is lutful mannan ghazal but some people call me Lutyoung.</p>
-            <p>I'm very secretive cos i'm an introvert</p>
-            <div>
-                I'm 18 years of age
-            </div>
-        
-        </div>
-    </div> -->
 </body>
 </html>
